--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.4.2",
     "@clerk/themes": "^2.1.21",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/material": "^6.0.1",
+    "@tabler/icons-react": "^3.14.0",
     "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
