--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tabler/icons-react": "^3.14.0",
     "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
+    "flowbite": "^2.5.1",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
